@@ -1,3 +1,10 @@
+2015-02-08  Jan Hubicka  <hubicka@ucw.cz>
+
+	PR ipa/63566 
+	* cgraphunit.c (cgraph_node::analyze): Be sure target of thunk is
+	aliases before trying to expand it.
+	(cgraph_node::expand_thunk): Fix formating.
+
 2015-02-07  Sandra Loosemore  <sandra@codesourcery.com>
 
 	* doc/extend.texi (Function Attributes [naked]): Copy-edit.
